--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,20 @@
 .section-box {
   background-color: #ddd;
-  height: 1000px; /* force scrolling */
+  height: 1000px; /* forces scrolling */
   margin-bottom: 20px;
   padding: 15px;
   border: 1px solid #999;
+}
+
+/* Mobile dropdown menu full width and background */
+@media (max-width: 767px) {
+  .navbar-collapse {
+    background-color: #ddd;
+    width: 100%;
+  }
+
+  .navbar-nav > li > a {
+    color: black;
+    font-weight: bold;
+  }
 }
