--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,20 @@
     width: 100%;
   }
 
+  .navbar-nav {
+    width: 100%;
+  }
+
+  .navbar-nav > li {
+    float: none;
+    width: 100%;
+    text-align: center; /* Center the text inside the li */
+  }
+
   .navbar-nav > li > a {
+    display: block;
     color: black;
     font-weight: bold;
+    text-align: center; /* Center the link text */
   }
 }
